# dottools

./: Cargo.toml  LICENSE  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzzer.rs
src/: lib.rs  tests.rs
src/tests/: mod.rs  state.rs
src/tests/parse/: diagonal.rs  fuzzer.rs  horizontal.rs  mod.rs  node.rs  vertical.rs
