[package]
name = "dottools"
description = "Tools for working with dot files."
version = "0.1.0"
authors = ["Corin Lawson <corin@phiware.com.au>"]
edition = "2018"
license = "MIT"

repository = "https://github.com/au-phiware/dottools.git"

[dependencies]
petgraph = "0.4.13"
unicode-normalization = "0.1.8"
